--- a/blog/2013-12-03-Palette2.rst
+++ b/blog/2013-12-03-Palette2.rst
@@ -29,7 +29,7 @@ The RYB color wheel and the color schemes we will design below are easy to view 
 >     n = length cs
 >     a = 1 / (fromIntegral n) @@ turn
 >     w = wedge 1 (0 @@ turn) a # lw 0
->     r = 1/4 - 1/(2*(fromIntegral n))
+>     r = (1/4 @@ turn)  ^-^  (1/(2*(fromIntegral n)) @@ turn)
 
 Here is the RYB color wheel. Notice that colors we perceive as opposites, e.g. red and green are 180 degrees apart on the wheel. In `harmony` the RYB color wheel is created by shrinking and stretching sections of the HSB color wheel so that complimentary colors are always on opposite sides of the wheel.
 
@@ -53,7 +53,7 @@ Here is the RYB color wheel. Notice that colors we perceive as opposites, e.g. r
 >     n = length cs
 >     a = 1 / (fromIntegral n) @@ turn
 >     w = wedge 1 (0 @@ turn) a # lw 0
->     r = 1/4 - 1/(2*(fromIntegral n))
+>     r = (1/4 @@ turn)  ^-^  (1/(2*(fromIntegral n)) @@ turn)
 > ryb = [rybColor n | n <- [0..23]]
 > example = wheel ryb
 
@@ -115,7 +115,7 @@ Since we have been talking about complimentary colors, the first scheme we descr
 >     n = length cs
 >     a = 1 / (fromIntegral n) @@ turn
 >     w = wedge 1 (0 @@ turn) a # lw 0
->     r = 1/4 - 1/(2*(fromIntegral n))
+>     r = (1/4 @@ turn)  ^-^  (1/(2*(fromIntegral n)) @@ turn)
 > gr = (1 + sqrt 5) / 2
 > bar cs = hcat [square gr # scaleX s # fc k # lw 0 | k <- cs] # centerXY
 >   where s = gr / (fromIntegral (length cs))
@@ -143,7 +143,7 @@ A *Monochromatic* color harmony consists of the base color plus various tints, s
 >     n = length cs
 >     a = 1 / (fromIntegral n) @@ turn
 >     w = wedge 1 (0 @@ turn) a # lw 0
->     r = 1/4 - 1/(2*(fromIntegral n))
+>     r = (1/4 @@ turn)  ^-^  (1/(2*(fromIntegral n)) @@ turn)
 > base = sRGB24read "#FFC200"
 > example = wheel $ monochrome base
 
@@ -167,7 +167,7 @@ The following scheme does not have a name as far as I know. We take the base col
 >     n = length cs
 >     a = 1 / (fromIntegral n) @@ turn
 >     w = wedge 1 (0 @@ turn) a # lw 0
->     r = 1/4 - 1/(2*(fromIntegral n))
+>     r = (1/4 @@ turn)  ^-^  (1/(2*(fromIntegral n)) @@ turn)
 > base = sRGB24read "#FFC200"
 > example = wheel $ bwg base
 
