--- a/doc/3D.rst
+++ b/doc/3D.rst
@@ -5,20 +5,30 @@
 
 .. default-role:: hs
 
+.. container:: warning
+
+  The 3D features of ``diagrams`` are changing even more rapidly than
+  the rest of the library.  The examples in this tutorial may not work
+  in the next release! This tutorial is provided for those interested
+  in trying out cutting-edge features; we welcome feedback and
+  contributions.
+
 Diagrams can be used to model three dimensional scenes, as well.
-There is currently one 3D Backend, [diagrams-povray][], which uses
-[POV-Ray][] to raytrace the scene to PNG.  Many functions used for 2D
-Diagrams have polymorphic types and can also be used in 3D.  Some are
-specific to three dimensions - many of these are introduced below.
-And some definitions have a 2D and a 3D version, with the same name,
-such as `unitX`.
+There is currently one 3D Backend, `diagrams-povray`_, which uses
+`POV-Ray`_ to raytrace the scene to PNG.  (Note that
+`diagrams-povray`_ is currently unreleased; you can obtain and build
+it from github.)  Many functions used for 2D diagrams have polymorphic
+types and can also be used in 3D.  Some are specific to three
+dimensions---many of these are introduced below.  And some definitions
+have a 2D and a 3D version, with the same name, such as `unitX`.
 
 .. _diagrams-povray: https://github.com/diagrams/diagrams-povray
 .. _POV-Ray: http://povray.org/
 
-Every 3D scene rendered by Diagrams needs 3 elements - an object, a
-light, and a camera.  (Future Backends may work differently.)  Without
-a light, the scene will appear completely black.
+Every 3D scene rendered by ``diagrams-povray`` needs 3 elements: an
+object, a light, and a camera.  (Future backends may work
+differently.)  Without a light, the scene will appear completely
+black.
 
 .. class:: lhs
 
@@ -41,14 +51,14 @@ a light, the scene will appear completely black.
   main :: IO ()
   main = putStrLn $ renderDia POVRay POVRayOptions $ mconcat [example, cam, light]
 
-Note that we import Diagrams.Prelude.ThreeD instead of
-Diagrams.Prelude.  This module exports all of the definitions useful
-in 3D, and not those, like the 2D `unitX`, which would get in the way.
-We introduce a camera, a light which casts parallel rays, and some
-spheres (of radius 1).  We move the camera away from the origin, so
-that the spheres are in its field of view.  The translate function is
-polymorphic, and takes a vector `R3` because cameras are defined in
-`R3`.  Now we render our scene.  At the command line:
+Note that we import `Diagrams.Prelude.ThreeD`:mod: instead of
+`Diagrams.Prelude`:mod:.  This module exports all of the definitions
+useful in 3D, and not those, like the 2D `unitX`, which would get in
+the way.  We introduce a camera, a light which casts parallel rays,
+and some spheres (of radius 1).  We move the camera away from the
+origin, so that the spheres are in its field of view.  The translate
+function is polymorphic, and takes a vector `R3` because cameras are
+defined in `R3`.  Now we render our scene.  At the command line:
 
 ::
 
@@ -98,9 +108,3 @@ scene.
 
 .. image:: /doc/static/3dtutorial2.png
 
-.. container:: warning
-
-  The 3D features of Diagrams are changing even more rapidly than the
-  rest of the library.  The examples in this tutorial will not work in
-  the next release.
-               
