--- a/blog/2013-12-03-Palette2.rst
+++ b/blog/2013-12-03-Palette2.rst
@@ -13,7 +13,10 @@ In part 1 of this post we talked mostly about borrowing a set of colors that was
 
 Most software provides some type of color picker for selecting a single color. To choose a color we are often given the choice between several different color panels, including a clolor wheel, color sliders, and others. The sliders metaphor works well for choosing a single color, but it doesn't provide us with an intuitive way to choose a color scheme.
 
-The color wheel is more promising. A color wheel is designed to have pure hues on the perimeter, that means saturation and brightness are set to 100%. If you look at this type of color wheel, that is one based on HSB or HSL, you will notice that the red, green and blue sections are 120 degrees apart. If you look at [Adobe Kuler](https://kuler.adobe.com/create/color-wheel/) on the other hand you will see that red and green lie on oposite poles of the wheel. That's a better way to visualize the color wheel since red and green are complimentary colors (They produce black or white when combined in the correct proportions). [Complimentary colos](http://en.wikipedia.org/wiki/Complementary_colors)
+The color wheel is more promising. A color wheel is designed to have pure hues on the perimeter, that means saturation and brightness are set to 100%. If you look at this type of color wheel, that is one based on HSB or HSL, you will notice that the red, green and blue sections are 120 degrees apart. If you look at `Adobe Kuler`_ on the other hand you will see that red and green lie on oposite poles of the wheel. That's a better way to visualize the color wheel since red and green are complimentary colors (They produce black or white when combined in the correct proportions). `Complimentary colors`_
+
+.. _Adobe Kuler: https://kuler.adobe.com/create/color-wheel/
+.. _Complimentary colors: http://en.wikipedia.org/wiki/Complementary_colors
 
 The point is that when picking colors for a scheme, tradional color harmony defines which colors are chosen by choosing a base color and other colors on the wheel at specific angles apart. The wheel that is used though is one with complimentary colors opposite each other like in Kuler. This is the so called traditional or artist's color wheel. We call it the RYB (red, yellow, blue) wheel since it is based on those three being the primary colors and colors in between as mixtures of those.
 
@@ -171,7 +174,7 @@ The following scheme does not have a name as far as I know. We take the base col
 > base = sRGB24read "#FFC200"
 > example = wheel $ bwg base
 
-Sometimes it is usefule to view a color scheme like a wheel but with the base color as a disc in the center. We define the function `pie` for this purpose.
+Sometimes it is useful to view a color scheme like a wheel but with the base color as a disc in the center. We define the function `pie` for this purpose.
 
 .. class:: lhs
 
