more work on 1.1 release

--- a/release/1.1/release-1.1.org
+++ b/release/1.1/release-1.1.org
@@ -54,6 +54,8 @@
    Waiting to merge new double-buffering code:
    https://github.com/diagrams/diagrams-gtk/pull/1
 ** diagrams-postscript						       :todo:
+   Waiting to merge CMYK support?
+
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
   + [ ] upper bounds fixed
@@ -63,6 +65,14 @@
   + [ ] version bump
   + [ ] LICENSE updated
 ** diagrams-svg							       :todo:
+  + [ ] CHANGES updated
+  + [ ] all CHANGES in user manual or tutorial
+  + [ ] upper bounds fixed
+  + [ ] lower bounds fixed
+  + [ ] update tested-with field
+  + [ ] Haddocks up to date
+  + [ ] version bump
+  + [ ] LICENSE updated
 ** diagrams							       :todo:
 ** diagrams-builder						       :todo:
 ** diagrams-haddock						       :todo:
